<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.raspapp.MainActivity" >

    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_settings"
          android:showAsAction="always" />
    <item android:id="@+id/action_check_internet"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_check_internet_connection"
          android:showAsAction="always" />
    <item android:id="@+id/action_exit"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_exit"
          android:showAsAction="always" />
    
</menu>
