<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:visibility="visible" >

    <TextView
        android:id="@+id/rasp_temperature_with_timestamp_go_back_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/rasp_temperature_with_timestamp_go_back_label" />

    <EditText
        android:id="@+id/rasp_number_edit_text"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/rasp_button_temperature_back_go"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="20dp"
        android:onClick="raspButtonGoBackOnClick"
        android:text="@string/rasp_temperature_go__back_button" />

    <TextView
        android:id="@+id/rasp_historical_temperature_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:text="@string/rasp_temperature_word"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/rasp_historical_temperature_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/rasp_text_could_not_connect"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/rasp_historical_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/rasp_date_word"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/rasp_historical_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rasp_text_could_not_connect"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="invisible" />
        
    </LinearLayout>

</LinearLayout>